; ModuleID = '/home/carl/AnghaBench/RetroArch/extr_retroarch.c_command_event_undo_save_state.c'
source_filename = "/home/carl/AnghaBench/RetroArch/extr_retroarch.c_command_event_undo_save_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_NO_SAVE_STATE_HAS_BEEN_OVERWRITTEN_YET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i64)* @command_event_undo_save_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @command_event_undo_save_state(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = call i64 (...) @content_undo_save_buf_is_empty()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @MSG_NO_SAVE_STATE_HAS_BEEN_OVERWRITTEN_YET, align 4
  %10 = call i32 @msg_hash_to_str(i32 %9)
  %11 = load i64, i64* %4, align 8
  %12 = call i32 @strlcpy(i8* %8, i32 %10, i64 %11)
  br label %17

13:                                               ; preds = %2
  %14 = call i32 (...) @content_undo_save_state()
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %13
  br label %17

17:                                               ; preds = %7, %16, %13
  ret void
}

declare dso_local i64 @content_undo_save_buf_is_empty(...) #1

declare dso_local i32 @strlcpy(i8*, i32, i64) #1

declare dso_local i32 @msg_hash_to_str(i32) #1

declare dso_local i32 @content_undo_save_state(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
